--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -63,12 +63,12 @@
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
           </ul>
-          <form class="navbar-form navbar-right" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
+              <!--<form class="navbar-form navbar-right" role="search">-->
+                <!--<div class="form-group">-->
+                  <!--<input type="text" class="form-control" placeholder="Search">-->
+                <!--</div>-->
+                <!--<button type="submit" class="btn btn-default">Submit</button>-->
+              <!--</form>-->
         </div><!-- /.navbar-collapse -->
       </nav>
 
@@ -78,14 +78,14 @@
 
     </div>
 
-    <div id="footer">
-      <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
-        </p>
-      </div>
-    </div id="footer">
+    <!--<div id="footer">-->
+      <!--<div class="container">-->
+        <!--<p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}-->
+          <!--with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>-->
+          <!--and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>-->
+        <!--</p>-->
+      <!--</div>-->
+    <!--</div id="footer">-->
 
     {% include JB/analytics %}
 
