--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -14,9 +14,9 @@
   float: right; }*/
 
 /* Jekyll Bootstrap Colors */
-h1, h2, h3, h4 {
-  color: #f22430;
-}
+/*h1, h2, h3, h4 {*/
+  /*color: #f22430;*/
+/*}*/
 #footer {
   background-color: #fdcd60;
 }
