--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -46,6 +46,7 @@
     <div id="wrap">
       <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -70,6 +71,7 @@
                 <!--<button type="submit" class="btn btn-default">Submit</button>-->
               <!--</form>-->
         </div><!-- /.navbar-collapse -->
+        </div>
       </nav>
 
       <div class="container">
