--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="row">
-  <div class="span10">
+  <div class="span10" style="width:98%">
     {{ content }}
     <hr>
     <div class="pagination">
@@ -24,31 +24,4 @@
     <hr>
     {% include JB/comments %}
   </div>
-  
-  <div class="span4">
-    <h4>Published</h4>
-    <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
-
-  {% unless page.tags == empty %}
-    <h4>Tags</h4>
-    <ul class="tag_box">
-    {% assign tags_list = page.tags %}
-    {% include JB/tags_list %}
-    </ul>
-  {% endunless %}  
-  </div>
 </div>
-<!-- Duoshuo Comment BEGIN -->
-<div class="ds-thread"></div>
-<script type="text/javascript">
-    var duoshuoQuery = {short_name:"yanlinpu"};
-    (function() {
-        var ds = document.createElement('script');
-        ds.type = 'text/javascript';ds.async = true;
-        ds.src = 'http://static.duoshuo.com/embed.js';
-        ds.charset = 'UTF-8';
-        (document.getElementsByTagName('head')[0]
-                || document.getElementsByTagName('body')[0]).appendChild(ds);
-    })();
-</script>
-<!-- Duoshuo Comment END -->
