--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -8,14 +8,14 @@
 	*zoom:1;
 }
 
-h1, h2 {  }
+/*h1, h2 {  }*/
 
-h1 {
-	color:#7DBADF;
-	font-size:36px;
-	font-weight:400;
-	margin:0;
-}
+/*h1 {*/
+	/*color:#7DBADF;*/
+	/*font-size:36px;*/
+	/*font-weight:400;*/
+	/*margin:0;*/
+/*}*/
 
 h2 {
 	font-size:22px;
@@ -176,7 +176,8 @@ dl.timelineMinor {
 	float:left;
 	line-height:1.5em;
 	margin:6px 0 10px;
-	width:500px;
+	/*width:500px;*/
+    width: 80%;
 }
 
 .timelineEvent h4 {
